feat: se modifica css, html de tickets para mejorar redacción y se crea nuevo modulo de detalle_ticket.html para que se pueda visualizar los detalles del ticket creado y además la solución sugerida por el bot de IA

--- a/src/views/pages/tickets.html
+++ b/src/views/pages/tickets.html
@@ -30,9 +30,12 @@
     </div>
     <div class="container-fluid p-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h5 class="mb-0">Tickets Abiertos</h5>
+            <h5 class="mb-1">Pool de Tickets</h5>
             <button class="btn btn-secondary">Nuevo Ticket</button>
         </div>
+
+        <p class="text-secondary mb-5">Para abrir un ticket y ver su contenido completo presiona sobre el texto
+            azul en <span class="fw-bold">No. de ticket</span></p>
 
         <!-- NUEVO TICKET MODAL -->
         <!-- Modal Nuevo Ticket -->
@@ -92,7 +95,7 @@
             <table id="ticketTable" class="table table-hover table-bordered align-middle text-center">
                 <thead class="table-thead-color">
                 <tr>
-                    <th>ID</th>
+                    <th>No. de Ticket</th>
                     <th>Fecha</th>
                     <th>Nombre</th>
                     <th>Asunto</th>
@@ -103,7 +106,7 @@
                 </thead>
                 <tbody>
                 <tr class="table-danger">
-                    <td><a href="#">8VT-PZU-BRG9</a></td>
+                    <td><a href="detalle_ticket.html?q=8VT-PZU-BRG9">8VT-PZU-BRG9</a></td>
                     <td>04 May 21</td>
                     <td>Klemen</td>
                     <td>Ticket priority Critical</td>
@@ -112,7 +115,7 @@
                     <td><span class="priority-tag priority-critical">Crítica</span></td>
                 </tr>
                 <tr>
-                    <td><a href="#">PBG-J12-UJ9W</a></td>
+                    <td><a href="detalle_ticket.html?q=8VT-PZU-BRG9">PBG-J12-UJ9W</a></td>
                     <td>04 May 21</td>
                     <td>Klemen</td>
                     <td>Ticket priority High</td>
@@ -121,7 +124,7 @@
                     <td><span class="priority-tag priority-high">Alta</span></td>
                 </tr>
                 <tr>
-                    <td><a href="#">GST-MBA-DYA6</a></td>
+                    <td><a href="detalle_ticket.html?q=8VT-PZU-BRG9">GST-MBA-DYA6</a></td>
                     <td>04 May 21</td>
                     <td>Klemen</td>
                     <td>Ticket priority Medium</td>
@@ -130,7 +133,7 @@
                     <td><span class="priority-tag priority-medium">Media</span></td>
                 </tr>
                 <tr>
-                    <td><a href="#">MN9-GNE-WX1D</a></td>
+                    <td><a href="detalle_ticket.html?q=8VT-PZU-BRG9">MN9-GNE-WX1D</a></td>
                     <td>04 May 21</td>
                     <td>Klemen</td>
                     <td>Ticket priority Low</td>
