--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -6,7 +6,7 @@
 
 body, html {
     height: 100%;
-    background-color: #F5F5F5;
+    background: #F5F5F5;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,12 +15,18 @@ body, html {
 
 .login-container {
     background: white;
-    padding: 2.5rem;
+    padding: 3rem;
     border-radius: 1rem;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
     width: 100%;
+    max-width: 500px;
     transition: all 0.3s ease-in-out;
+}
+
+.input-group-text {
+    background-color: #eceff1;
+    border: none;
+    border-radius: 0.5rem 0 0 0.5rem;
 }
 
 .login-container:hover {
@@ -48,16 +54,16 @@ h2 {
 }
 
 .btn-login {
-    background-color: #546e7a;
-    border: none;
+    background-color: #37474f;
     color: white;
-    padding: 0.75rem;
+    border: none;
     border-radius: 0.5rem;
     font-weight: 500;
+    padding: 0.75rem;
     transition: background-color 0.3s ease-in-out;
 }
 
 .btn-login:hover {
-    background-color: #546e7a;
+    background-color: #263238;
     color: #ffffff;
 }
