--- a/src/views/pages/roles.html
+++ b/src/views/pages/roles.html
@@ -8,6 +8,7 @@
           integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.1/css/buttons.bootstrap5.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/css/common.css">
 </head>
 <body>
@@ -15,17 +16,19 @@
     <button class="navbar-toggler" type="button" onclick="toggleSidebar()">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a href="../../../index.html" class="btn btn-secondary">Cerrar Sesión</a>
+    <a href="../../../index.html" class="btn btn-secondary">
+        <i class="bi bi-box-arrow-right me-2"></i>Cerrar Sesión
+    </a>
 </nav>
 <div class="d-flex">
     <div class="sidebar" id="sidebar">
         <div class="px-3 mt-5">
-            <a href="start.html">Dashboard</a>
-            <a href="bot.html">Base de Conocimiento (Bot)</a>
-            <a href="tickets.html">Tickets</a>
-            <a href="categorias.html">Categorias</a>
-            <a href="usuarios.html">Usuarios</a>
-            <a href="roles.html" class="active">Roles</a>
+            <a href="start.html"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
+            <a href="bot.html"><i class="bi bi-robot me-2"></i>Base de Conocimiento (Bot)</a>
+            <a href="tickets.html"><i class="bi bi-ticket-detailed me-2"></i>Tickets</a>
+            <a href="categorias.html"><i class="bi bi-tags me-2"></i>Categorías</a>
+            <a href="usuarios.html"><i class="bi bi-people me-2"></i>Usuarios</a>
+            <a href="roles.html" class="active"><i class="bi bi-person-badge me-2"></i>Roles</a>
         </div>
     </div>
     <div class="container-fluid p-5">
@@ -124,18 +127,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/pdfmake.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/vfs_fonts.js"></script>
-<script>
-    $(document).ready(function () {
-        $('#rolesTable').DataTable({
-            dom: 'Bfrtip',
-            buttons: [
-                'copy', 'excel', 'pdf', 'print'
-            ],
-            language: {
-                url: '//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json'
-            }
-        });
-    });
-</script>
+<script src="../../utils/init.js" type="module"></script>
 </body>
 </html>
