--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -54,16 +54,14 @@ h2 {
 }
 
 .btn-login {
-    background-color: #37474f;
+    background-color: #455A64;
     color: white;
     border: none;
     border-radius: 0.5rem;
-    font-weight: 500;
     padding: 0.75rem;
-    transition: background-color 0.3s ease-in-out;
 }
 
 .btn-login:hover {
-    background-color: #263238;
+    background-color: #455A64;
     color: #ffffff;
 }
