--- a/src/views/pages/detalle_ticket.html
+++ b/src/views/pages/detalle_ticket.html
@@ -13,7 +13,7 @@
     <button class="navbar-toggler" type="button" onclick="toggleSidebar()">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a href="../../../index.html" class="btn btn-secondary">
+    <a href="../../../index.html" class="btn btn-secondary m-3">
         <i class="bi bi-box-arrow-right me-2"></i>Cerrar Sesión
     </a>
 </nav>
@@ -29,13 +29,16 @@
         </div>
     </div>
     <div class="container-fluid p-5">
-        <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center gap-3 mb-4">
             <h5 class="mb-0">Detalle #8VT-PZU-BRG9</h5>
-            <div>
-                <button class="btn btn-secondary me-2" data-bs-toggle="modal" data-bs-target="#modalAsignarAgente">
-                    Asignar un agente manual
+            <div class="d-flex flex-column flex-md-row gap-2" style="max-width: 500px; width: 100%;">
+                <button class="btn btn-secondary w-100 w-md-auto" data-bs-toggle="modal"
+                        data-bs-target="#modalAsignarAgente">
+                    <i class="bi bi-person-circle me-2"></i>Asignar agente
                 </button>
-                <a href="tickets.html" class="btn btn-secondary">Regresar a "Tickets"</a>
+                <a href="tickets.html" class="btn btn-secondary w-100 w-md-auto">
+                    <i class="bi bi-arrow-left-circle me-2"></i>Regresar a "Tickets"
+                </a>
             </div>
         </div>
 
@@ -47,7 +50,7 @@
 
         <div class="row">
             <!-- Sugerencia del Bot -->
-            <div class="col-sm-12 col-md-6 mb-2">
+            <div class="col-sm-12 col-md-6 mb-3">
                 <div class="bot-card h-auto">
                     <h5 class="mb-4">Sugerencia del Bot</h5>
                     <p><strong>Prioridad:</strong> <span id="ticket-priority" class="priority-tag">Crítica</span></p>
