--- a/src/views/pages/tickets.html
+++ b/src/views/pages/tickets.html
@@ -16,7 +16,7 @@
     <button class="navbar-toggler" type="button" onclick="toggleSidebar()">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a href="../../../index.html" class="btn btn-secondary">
+    <a href="../../../index.html" class="btn btn-secondary m-3">
         <i class="bi bi-box-arrow-right me-2"></i>Cerrar Sesión
     </a>
 </nav>
@@ -32,9 +32,9 @@
         </div>
     </div>
     <div class="container-fluid p-5">
-        <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center gap-3 mb-4">
             <h5 class="mb-1">Pool de Tickets</h5>
-            <button class="btn btn-secondary">Nuevo Ticket</button>
+            <button class="btn btn-secondary"><i class="bi bi-plus-circle me-2"></i>Nuevo Ticket</button>
         </div>
 
         <p class="text-secondary mb-5">Para abrir un ticket y ver su contenido completo presiona sobre el texto
@@ -106,7 +106,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr class="table-danger">
+                <tr>
                     <td><a href="detalle_ticket.html?q=8VT-PZU-BRG9">8VT-PZU-BRG9</a></td>
                     <td>04 May 21</td>
                     <td>Klemen</td>
