feat: se añade logo, se añade mejoras al login de los colores, se añade mejoras en css

--- a/src/views/pages/detalle_ticket.html
+++ b/src/views/pages/detalle_ticket.html
@@ -19,7 +19,10 @@
 </nav>
 <div class="d-flex">
     <div class="sidebar" id="sidebar">
-        <div class="px-3 mt-5">
+        <div class="text-center">
+            <img src="../../assets/img/logo.png" alt="Logo" class="mb-4 mt-4" width="120px">
+        </div>
+        <div class="px-3">
             <a href="start.html"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
             <a href="bot.html"><i class="bi bi-robot me-2"></i>Base de Conocimiento (Bot)</a>
             <a href="tickets.html" class="active"><i class="bi bi-ticket-detailed me-2"></i>Tickets</a>
