--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -54,7 +54,7 @@ h2 {
 }
 
 .btn-login {
-    background-color: #455A64;
+    background-color: #546e7a;
     color: white;
     border: none;
     border-radius: 0.5rem;
@@ -62,6 +62,15 @@ h2 {
 }
 
 .btn-login:hover {
-    background-color: #455A64;
-    color: #ffffff;
+    background-color: #546e7a;
+    color: white;
+    border: none;
+    border-radius: 0.5rem;
+    padding: 0.75rem;
+}
+
+.btn-login:active {
+    background-color: #546e7a !important;
+    color: white !important;
+    border: none;
 }
