--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -11,6 +11,22 @@ body {
     font-family: 'Segoe UI', sans-serif;
 }
 
+
+.loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+
+
 /* ======= Sidebar ======= */
 .sidebar {
     background-color: #F5F5F5;
