feat: se agrega validación de token en todas las pages y servicios, además se agrega eliminar al cerrar sesión todo el session storage

--- a/src/views/pages/categorias.html
+++ b/src/views/pages/categorias.html
@@ -24,9 +24,9 @@
     <button class="navbar-toggler" type="button" onclick="toggleSidebar()">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a href="../../../index.html" class="btn btn-secondary m-3">
-        <i class="bi bi-box-arrow-right me-2"></i>Cerrar Sesión
-    </a>
+    <button class="btn btn-secondary m-3" id="btnCloseSession"><i class="bi bi-box-arrow-right me-2"></i>Cerrar
+        Sesión
+    </button>
 </nav>
 <div class="d-flex">
     <div class="sidebar" id="sidebar">
@@ -142,5 +142,6 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../../utils/init.js" type="module"></script>
 <script src="../../utils/tokenValidation.js" type="module"></script>
+<script src="../../services/categories.js" type="module"></script>
 </body>
 </html>
