--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -18,7 +18,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
