--- a/src/views/pages/tickets.html
+++ b/src/views/pages/tickets.html
@@ -25,9 +25,9 @@
         <button class="navbar-toggler" type="button" onclick="toggleSidebar()">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="../../../index.html" class="btn btn-secondary m-3">
-            <i class="bi bi-box-arrow-right me-2"></i>Cerrar Sesión
-        </a>
+        <button class="btn btn-secondary m-3" id="btnCloseSession"><i class="bi bi-box-arrow-right me-2"></i>Cerrar
+            Sesión
+        </button>
     </nav>
     <div class="d-flex">
         <div class="sidebar" id="sidebar">
@@ -46,7 +46,8 @@
         <div class="container-fluid p-5">
             <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center gap-3 mb-4">
                 <h5 class="mb-1">Pool de Tickets</h5>
-                <button class="btn btn-secondary"><i class="bi bi-plus-circle me-2"></i>Nuevo Ticket</button>
+                <button class="btn btn-secondary" id="btnNuevoTicket"><i class="bi bi-plus-circle me-2"></i>Nuevo Ticket
+                </button>
             </div>
 
             <p class="text-secondary mb-5">Para abrir un ticket y ver su contenido completo presiona sobre el texto
@@ -99,7 +100,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                            <button type="button" class="btn btn-secondary">Guardar Ticket</button>
+                            <button type="button" class="btn btn-secondary" id="btnGuardarTicket">Guardar Ticket</button>
                         </div>
                     </div>
                 </div>
